# Cerebpp

./: .gitignore  CMakeLists.txt  ERRORS.md  Mlib.sln  My-library.sln  README.md
Cerebpp/: CMakeLists.txt
Cerebpp/include/Crb/FNN/: fnn.hpp  layer.hpp
Cerebpp/include/Crb/NN/: nn.hpp
Cerebpp/include/Crb/System/: file.hpp  keyboard.hpp  mouse.hpp
Cerebpp/include/Crb/Utility/: datapoint.hpp  time.hpp  vec2.hpp
Cerebpp/src/: datapoint.cpp  file.cpp  fnn.cpp  keyboard.cpp  layer.cpp  mouse.cpp  nn.cpp  time.cpp
Mlib/: Mlib.vcxproj  Mlib.vcxproj.filters
Mlib/src/Mlib/Ai/: ai.cpp  ai.hpp  layer.cpp  layer.hpp
Mlib/src/Mlib/Data/: datapoint.hpp
Mlib/src/Mlib/System/: file.hpp  mouse.hpp  system.cpp  system.hpp
Mlib/src/Mlib/Util/: util.hpp
Mlib/src/Mlib/Utility/: datapoint.hpp  math.cpp  math.hpp  time.cpp  time.hpp  vec2.hpp
Mlib/src/NN/: layer.cpp  layer.hpp  nn.cpp  nn.hpp
Mlib/src/System/: file.cpp  file.hpp  mouse.cpp
Mlib/src/Utility/: datapoint.cpp  datapoint.hpp  math.hpp  time.cpp
My-library/: My-library.vcxproj  My-library.vcxproj.filters  errors.txt
My-library/Mlib/: ai.hpp  util.hpp
My-library/Mlib/Ai/: layer.cpp  layer.hpp
My-library/Mlib/Util/: dataPoint.hpp
My-library/src/Mlib/: ai.hpp  data.hpp  util.hpp
My-library/src/Mlib/Ai/: ai.cpp  ai.hpp  layer.cpp  layer.hpp
My-library/src/Mlib/Data/: datapoint.cpp  vec2.hpp
My-library/src/Mlib/Io/: io.cpp  io.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
My-library/src/Mlib/Util/: data.hpp  io.hpp  (+2 more)
Test/: CMakeLists.txt  Test.vcxproj  main.cpp
Test/src/: main.cpp
